--- a/text/diagram/Makefile
+++ b/text/diagram/Makefile
@@ -1,11 +1,22 @@
 GENERATED=gen
-TARGETS=kinds.tex
+TARGETS=kinds_star1.tex kinds_star2.tex kinds_star_star.tex
+
+DOT2TEX=dot2tex --nominsize --autosize -tmath --figonly --docpreamble="`cat ../someprelude.tex`"
 
 all: $(TARGETS)
 
-kinds.tex: kinds.dot
-	dot2tex --nominsize --autosize -tmath --figonly kinds.dot > kinds.tex
+kinds_star1.tex: kinds_star1.dot
+	$(DOT2TEX) $< > $@
+
+kinds_star2.tex: kinds_star2.dot
+	$(DOT2TEX) $< > $@
+
+kinds_star_star.tex: kinds_star_star.dot
+	$(DOT2TEX) $< > $@
 
 generate: $(TARGETS)
 	mkdir -p $(GENERATED)
 	cp $(TARGETS) $(GENERATED)
+
+clean:
+	rm $(TARGETS)
