Added another example diagram.

--- a/text/diagram/Makefile
+++ b/text/diagram/Makefile
@@ -1,5 +1,5 @@
 GENERATED=gen
-TARGETS=kinds_star1.tex kinds_star2.tex kinds_star_star.tex
+TARGETS=kinds_star1.tex kinds_star2.tex kinds_star_star.tex num_intersection.tex
 
 DOT2TEX=dot2tex --nominsize --autosize -tmath --figonly --docpreamble="`cat ../someprelude.tex`"
 
@@ -12,6 +12,9 @@ kinds_star2.tex: kinds_star2.dot
 	$(DOT2TEX) $< > $@
 
 kinds_star_star.tex: kinds_star_star.dot
+	$(DOT2TEX) $< > $@
+
+num_intersection.tex: num_intersection.dot
 	$(DOT2TEX) $< > $@
 
 generate: $(TARGETS)
