Fixed makefile to work with dot2tex slightly more generally

--- a/text/diagram/Makefile
+++ b/text/diagram/Makefile
@@ -1,21 +1,24 @@
 GENERATED=gen
 TARGETS=kinds_star1.tex kinds_star2.tex kinds_star_star.tex num_intersection.tex
 
-DOT2TEX=dot2tex --nominsize --autosize -tmath --figonly --docpreamble="`cat ../someprelude.tex`"
+DOT2TEX=dot2tex --usepdflatex --nominsize -tmath --figonly --docpreamble="`cat ../someprelude.tex`"
+DOT2TEXFULL=$(DOT2TEX) --autosize
 
 all: $(TARGETS)
 
 kinds_star1.tex: kinds_star1.dot
-	$(DOT2TEX) $< > $@
+	$(DOT2TEXFULL) $< > $@
 
 kinds_star2.tex: kinds_star2.dot
-	$(DOT2TEX) $< > $@
+	$(DOT2TEX) --preproc $< | gvpr -c -f rgrid.gvpr \
+		| ./dot2tex.py --prog=neato --nominsize -tmath --figonly --docpreamble="`cat ../someprelude.tex`" \
+		> $@
 
 kinds_star_star.tex: kinds_star_star.dot
-	$(DOT2TEX) $< > $@
+	$(DOT2TEXFULL) $< > $@
 
 num_intersection.tex: num_intersection.dot
-	$(DOT2TEX) $< > $@
+	$(DOT2TEXFULL) $< > $@
 
 generate: $(TARGETS)
 	mkdir -p $(GENERATED)
